Ajustando issues sonar